<resources>
    <string name="app_name">Murphy_Lee</string>
    <string name="action_create_event">Create Event</string>
    <string name="action_search_events">Search Events</string>
    <string name="action_add_pledge">Add Pledge</string>
    <string name="title_fragment_event">New Event</string>
    <string name="exit_dialog">Exit</string>
    <string name="empty_fields">Empty inputs not allowed</string>

    <!--Search strings-->
    <string name="search_no_results">No results found!</string>
    <string name="search_results">Results found!</string>

    <!---Event entry strings-->
    <string name="event_name">Name</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="button_event_cancel">Cancel</string>
    <string name="button_event_save">Save</string>

    <!-- Party fragment strings -->
    <string name="party_fragment_title">Party Details</string>
    <string name="item_quantity_hint">Quantity</string>
    <string name="item_name_hint">Name</string>
    <string name="item_unit_hint">Unit</string>
    <string name="edit_context">Edit</string>
    <string name="delete_context">Delete</string>
    <string name="add_item_title">Add New Item</string>
    <string name="add_item_save">Save</string>
    <string name="add_item_cancel">Cancel</string>
</resources>
