<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_create_event"
        android:title="@string/action_create_event"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search_events"
        android:title="@string/action_search_events"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_add_pledge"
        android:title="@string/action_add_pledge"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always"/>

</menu>